mobile nav img style issue fix attempt - displays OK with devtools not on ios

--- a/src/App.css
+++ b/src/App.css
@@ -254,7 +254,8 @@ nav {
   height: auto;
 
   a {
-    flex: auto;
+    /* CHANGED FROM FLEX: AUTO TO ATTEMPT TO SOLVE MOBILE NAV IMG ISSUE */
+    flex: 1;
     padding: 0.15rem;
   }
 }
@@ -579,7 +580,7 @@ nav {
     max-width: 100%;
   }
   iframe {
-    max-width: 80%;
+    max-width: 100%;
     width: 100%;
     height: 200%;
   }
@@ -644,7 +645,7 @@ nav {
     line-height: 1.8;
     font-size: 1.5rem;
     display: grid;
-    max-width: 45ch;
+    /* max-width: 45ch; */
     /* max-width: 100%; */
     /* margin-right: 6rem; */
   }
@@ -1234,6 +1235,7 @@ nav {
     /* #authdate {
       display: flex;
     } */
+
     h3 {
       margin: 0;
     }
